<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The CyanogenMod Project
     Copyright (C) 2015 SlimRoms

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Galaxy Tab 2 Settings</string>

    <string name="category_dock_title">Dock</string>
    <string name="dockaudio_subcat_title">Dock Audio</string>
    <string name="use_dock_audio_title_head">Use Dock USB Audio</string>
    <string name="use_dock_audio_summary_head">Use the passive audio out on the dock</string>

    <!-- About -->
    <string name="about_action">About</string>
    <string name="about_title">Samsung Galaxy Tab 2 Settings</string>
    <string name="about_version_title">Version Number:</string>
    <string name="about_version_summary" translatable="false">1.0</string>
    <string name="about_copyright_title">Copyright:</string>
    <string name="about_copyright1" translatable="false">Copyright \u00A9 SlimRoms 2015</string>
    <string name="about_copyright2" translatable="false">Copyright \u00A9 CyanogenMod 2012</string>
    <string name="about_translation_tile">Translate</string>
    <string name="about_translation_summary">Translate on Crowdin</string>

</resources>
