<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/about_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/about_version_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/about_version_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/about_version_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_version_title"
        android:layout_centerHorizontal="true"
        android:text="@string/about_version_summary"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_translation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_version_summary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/about_translation_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/about_translation_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_translation_title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/about_translation_summary"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_copyright1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_translation_summary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/about_copyright1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_copyright2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_copyright1"
        android:layout_centerHorizontal="true"
        android:text="@string/about_copyright2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>